--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,3 @@
-.App {
-  text-align: center;
-}
-
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -28,11 +24,56 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App {
+  text-align: center;
+  display: flex;
+}
+
+.side-nav-container {
+  flex-basis: 200px;
+  background-color: black;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  padding-top: 50px;
+}
+
+.main-container {
+  flex-basis: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.header {
+  height: 60px;
+  background-color: #4a90e2;
+}
+
+.main {
+  height: calc(100vh - 60px);
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  padding: 30px;
+}
+
+.card-container {
+  border-radius: 4px;
+  width: 270px;
+  height: 400px;
+  text-align: center;
+  border: 1px solid #4a4a4a;
+  padding: 30px;
+  cursor: pointer;
+}
+
+.plans-container {
+  display: flex;
+  gap: 20px;
+}
+
+.selected-plan {
+  border-color: #4a90e2;
+  box-shadow: 0px 2px 8px 0px rgba(74, 144, 226, 1);
 }
